--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practica 7</title>
     <link rel="stylesheet" href="CSS/style.css">
+
 </head>
 
 <body>
@@ -23,8 +24,10 @@
     </div>
     <div class="areaPrincipal">
         <div id="datos">
-            <p>Visítanos y disfruta del mejor sabor</p>
-            <p>Contamos con los mejores sabores</p>
+           
+                <p style="font-size: 35px; text-align: center;">Visítanos y disfruta del mejor sabor</p>
+                <p style="font-size: 35px; text-align: center;">Contamos con los mejores sabores</p>
+            
         </div>
     </div>
     <div class="piePagina"></div>
