--- a/nosotros.html
+++ b/nosotros.html
@@ -55,6 +55,11 @@
                 la calidad y el compromiso con nuestros clientes.</p><br>
 
 
+                <center>
+                    <img src="https://scontent.ftgz1-2.fna.fbcdn.net/v/t39.30808-6/451011489_499353735939756_8628678376409157281_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=127cfc&_nc_ohc=wY-7UVTj7D0Q7kNvgE91KOM&_nc_ht=scontent.ftgz1-2.fna&_nc_gid=AaWBkCW8UvAyKg95fm8FGqj&oh=00_AYBm5ks7UsZIlm9xPLlBmJSC9puMSjILdeyL6tOc60lDqQ&oe=66EEC7B1" width="250px">
+                </center>
+
+
 
 
 
