--- a/contacto.html
+++ b/contacto.html
@@ -1,1 +1,122 @@
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15280.94121381594!2d-93.11584860835728!3d16.764964840103733!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85ecd8f1f7a198ab%3A0x535da5f638e08714!2sAv.%204a.%20Nte.%20Pte.%20928-982%2C%20Guadalupe%2C%2029000%20Tuxtla%20Guti%C3%A9rrez%2C%20Chis.!5e0!3m2!1ses-419!2smx!4v1726529489345!5m2!1ses-419!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Practica 7</title>
+    <link rel="stylesheet" href="CSS/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <title>Imagen Ovalada</title>
+    <style>
+        .nosotros {
+            font-family: 'Lobster', cursive;
+            font-size: 72px;
+            color: #ffffff;
+            text-shadow: 4px 4px 0px #131212;
+            text-align: center;
+        }
+
+        #contacto {
+            width: 80%;
+            background-color: #38953e;
+            height: 950px;
+            margin: auto;
+            opacity: 1;
+            color: #2a3e55;
+            padding: 10px;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+
+        .piecontacto {
+    width: 100%;
+    /*ancho*/
+    height: 35px;
+    /*alto*/
+    background: #026637;
+    /*Color de fondo*/
+    color: white;
+    /*Color de letra dentro de la clase*/
+    bottom: 0;
+    /*Espacio de separación parte inferior*/
+    position: fixed;
+    left: 0;
+    /*Alineación de contenidos a la izquierda*/
+}
+
+        body
+    </style>
+
+
+</head>
+
+<body>
+
+    <div id="encabezado">
+        <div id="menu">
+            <ul>
+                <li><a href="index.html" title="Página principal">Inicio</a></li>
+                <li><a href="nosotros.html" title="descripción del negocio">Nosotros</a></li>
+                <li><a href="catalogo.html" title="Catálogo">Nuestros productos</a></li>
+                <li><a href="galeria.html" title="Fotos">Galeria</a></li>
+                <li><a href="contacto.html" title="Nuestros datos">Contacto</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="areaPrincipal">
+        <div id="contacto">
+
+            <h1 style="font-size: 55px;" class="nosotros">
+                ✧ Filiberto Montes Oca✧
+
+
+            </h1>
+            <center>
+                <td> <img class="imagen-ovalada" src="img/dueño.jpg" alt="">
+            </center>
+
+
+            <center>
+                <table>
+                    <tr>
+                        <td><b>📧Correo: </b>don.filiberto@hotmail.com</td><br>
+                    </tr>
+                    <tr>
+                        <td><b>📞Teléfono:</b> 961 540 0293
+                        </td>
+                    </tr>
+
+                </table>
+            </center>
+            <center>
+                <p style="font-size: 30px; color: black;">
+                    📍Nos encontramos en:
+                </p>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m24!1m12!1m3!1d30563.05455108825!2d-93.1599092840069!3d16.757668927645533!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m9!3e0!4m3!3m2!1d16.7542784!2d-93.15614719999999!4m3!3m2!1d16.758093799999997!2d-93.12262369999999!5e0!3m2!1ses-419!2smx!4v1726615192987!5m2!1ses-419!2smx"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </center>
+
+
+
+
+
+
+
+
+
+
+
+        </div>
+
+        <div class="piecontacto"></div>
+
+
+
+
+    </div>
+
+</body>
+
+</html>
