--- a/nosotros.html
+++ b/nosotros.html
@@ -7,6 +7,7 @@
     <title>Practica 7</title>
     <link rel="stylesheet" href="CSS/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <title>Imagen Ovalada</title>
     <style>
         .nosotros {
             font-family: 'Lobster', cursive;
@@ -28,7 +29,7 @@
                 <li><a href="index.html" title="Página principal">Inicio</a></li>
                 <li><a href="nosotros.html" title="descripción del negocio">Nosotros</a></li>
                 <li><a href="catalogo.html" title="Catálogo">Nuestros productos</a></li>
-                <li><a href="galería.html" title="Fotos">Galeria</a></li>
+                <li><a href="galeria.html" title="Fotos">Galeria</a></li>
                 <li><a href="contacto.html" title="Nuestros datos">Contacto</a></li>
             </ul>
         </div>
@@ -55,9 +56,10 @@
                 la calidad y el compromiso con nuestros clientes.</p><br>
 
 
-                <center>
-                    <img src="https://scontent.ftgz1-2.fna.fbcdn.net/v/t39.30808-6/451011489_499353735939756_8628678376409157281_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=127cfc&_nc_ohc=wY-7UVTj7D0Q7kNvgE91KOM&_nc_ht=scontent.ftgz1-2.fna&_nc_gid=AaWBkCW8UvAyKg95fm8FGqj&oh=00_AYBm5ks7UsZIlm9xPLlBmJSC9puMSjILdeyL6tOc60lDqQ&oe=66EEC7B1" width="250px">
-                </center>
+            <center>
+                <img class="imagen-ovalada" src="https://scontent.ftgz1-2.fna.fbcdn.net/v/t39.30808-6/451011489_499353735939756_8628678376409157281_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=127cfc&_nc_ohc=wY-7UVTj7D0Q7kNvgE91KOM&_nc_ht=scontent.ftgz1-2.fna&_nc_gid=AaWBkCW8UvAyKg95fm8FGqj&oh=00_AYBm5ks7UsZIlm9xPLlBmJSC9puMSjILdeyL6tOc60lDqQ&oe=66EEC7B1"
+                    width="250px">
+            </center>
 
 
 
